web-app/css/profiles.css
.scientific-name {
    font-style: italic;
}

.normal-text {
    font-style: normal;
}

.collection-thumbnail {
    width: 350px;
    height: 100px
}

accordion > div.panel-group > div.panel > div.panel-heading, .panel-title > a > a {
    /*color: #e9004a;*/
}

accordion > div.panel-group > div.panel {
    border: 1px solid white;
}

accordion > div.panel-group, #search {
    margin-bottom: 0px !important;
}

accordion > div.panel-group > div.panel > div.panel-heading {
    border-bottom: 1px solid #e7e7e7;
    padding-top: 15px;
    padding-bottom: 15px;
}

accordion > div.panel-group > div.panel > div.panel-collapse > div.panel-body {
    background-color: #f8f8f8;
    border: none;
    color: #e9004a;
    padding: 1px;
}

.accordion-item {
    border-bottom: 1px solid #e7e7e7;
    padding-left: 15px;
    padding-top: 15px;
    padding-bottom: 15px;
}

.accordion-item > a {
    font-weight: 200;
    font-size: 14px;
    text-decoration: none;
    line-height: 1.6em;
}

.panel-title > a > .caret {
    float: right;
    margin: 9px 5px 0;
}

.single-line-editor > .ta-editor {
    min-height: 50px !important;
    height: 50px !important;
}

#citationHtml > .ta-editor{
    height: 100px !important;
    min-height: 100px !important;
}

.inline-block, .ta-bind .inline-block, .single-line-editor > .inline-block {
    display: inline-block !important;
}

.inline {
    display: inline;
}

.square {
    width: 1.5em;
    max-width: 1.5em;
    min-width: 1.5em;
    height: 1.5em;
    min-height: 1.5em;
    max-height: 1.5em;
    display: inline-block;
}

.column-item {
    display: inline-block;
    width: 33%;
    padding: 5px;
}

.newItem {
    font-style: italic;
}

input[type=file] {
    display: inline-block;
}

.small, .small * {
    font-size: 12px !important;
}

.display-text {
    white-space: pre-wrap;
}

.annotation {
    font-weight: 200;
    font-size: 12px;
}

.citation {
    color: #999999;
    padding-bottom: 3px;
}

.citation:before {
    content: '\2014 \00A0';
}

.citation-example p {
    display: inline;
}

.citation-example > p {
    display: block;
}

.attribute-header-input {
    font-weight: bold;
}

/* Species status icons */
.status {
    height: 40px;
    width: 40px;
    margin: 0 6px 12px 0;
    display: inline-block;
    font-weight: bold;
    line-height: 40px;
    color: #333a3f;
    text-align: center;
    -moz-border-radius: 2em;
    -webkit-border-radius: 2em;
    border-radius: 2em; /* Opera 10.5, IE 9 */
    font-variant: small-caps;
    border: 1px solid #3d464c;
    background-color: #fff;
}

.status.green {
    background-color: #43c205;
    border-color: #43c205;
    color: #fff;
}

.status.yellow {
    background-color: #ffbb00;
    border-color: #ffbb00;
}

.status.red {
    background-color: #e30202;
    border-color: #e30202;
    color: #fff;
}

hr.comment-divider {
    border-top: 1px solid #e9004a;
}

.float-bottom-left {
    bottom: 10px;
    left: 10px;
    position: fixed;
}

.admin-message {
    text-align: center;
}

.admin-message-text {
    font-size: 24px;
}

.customizable-logo-img {
    max-width: 275px;
    margin: 0 auto;
}

.comparison-row {
    margin-top: 10px;
    padding-top: 10px;
}

.comparison-divider {
    border-top: 1px solid #eeeeee;
    padding-top: 5px;
}

.comparison-image {
    display: inline-block;
    margin: 2px 4px 2px 0;
    width: 100%;
}

.comparison-image img {
    height: 100px;
    /*min-width: 50px;*/
}

.minor-heading {
    font-weight: bold;
    padding-top: 2px;
    padding-bottom: 3px;
    display: inline-block;
}

.nomenclature .concept {
    font-weight: bold;
    display: inline-block;
}

.nomenclature a, .nomenclature a:focus, .nomenclature a:hover {
    margin-left: -10px;
    text-decoration: none;
}

.nomenclature .concept-detail {
    padding-left: 30px;
}

.nomenclature .nsl-link {
    display: inline-block;
    font-size: smaller;
    padding-left: 10px;
}

.nomenclature .apc {
    display: inline-block;
    color: green;
    padding-left: 10px;
    padding-right: 20px;
}

/* ---- */

/* Gallery styling */
.imgCon {
    display: inline-block;
    margin: 2px 4px 2px 0;
}

.imgCon img {
    height: 200px !important;
    min-width: 180px !important;
}

.imgCon.thumbnail {
}

.primary-image {
    display: inline-block;
    width: 100%;
}

.primary-image div img {
    height: 300px;
    min-width: 250px;
}

.primary-image p {
    height: 290px;
    min-width: 250px;
}

.upload-image-preview, .upload-image-preview img {
    height: 100px;
}

.thumbnail {
    margin-bottom: 0;
}

.caption {
    font-size: 12px;
    text-transform: none;
    margin: 0 !important;
    padding: 0 !important;
}

/* ---- */

/* audit history diff */

ins, .diff_insert {
    background-color: lightgreen !important;
    font-style: italic;
}

del, .diff_delete {
    background-color: orange !important;
    text-decoration: line-through;
}

/* ---- */

/* NSL CSS overrides */
editor, .toggleNext, a > apc, apnilink, a > i.fa-search {
    display: none;
}

.well.instances {
    background: white;
}

/* ---- */

/* Theme overrides */

#banner-image {
    background-size: 100%;
    min-height: 100px;
    background-position: center center;
}

.side-menu .navbar-header {
    border: none;
}

.jumbotron {
    margin: 5px 0;
}

.heading-large {
    margin-top: 0.5em;
}

.main-footer {
    margin-top: 0;
}

.zero-margin {
    margin-top: 0;
    margin-bottom: 0;
}

.section-panel-heading {
    margin-bottom: 0;
    margin-top: 5px;
}

.section-no-para {
    padding-left: 15px;
}

.section-heading {
    margin-left: 0;
}

.margin-top-1 {
    margin-top: 10px;
}

.margin-bottom-3 {
    margin-bottom: 150px;
}

.dropdown-menu {
    z-index: 9999;
}

.panel {
    margin-bottom: 10px;
}

.panel ul {
    padding-left: 35px;
}

.panel-body {
    padding: 5px 15px 5px 15px;
}


.panel .panel-heading {
    border-bottom: 1px solid rgba(0, 135, 190, 0.2);
    padding: 5px 15px 8px 15px;

}

.panel > .panel-body {
    padding-top: 1.2em;
}

#primary-nav.navbar {
    padding-top: 0px;
    min-height: 50px;
}

.main-stats > div:last-child {
    border: 1px solid rgba(233, 0, 74, 0.2);
}

.main-stats .main-stats__stat {
    text-align: center;
    border: 1px solid rgba(233, 0, 74, 0.2);
}

.stat__number {
    font-size: 14px;
    min-height: 30px;
    max-height: 40px;
}

.main-stats__stat {
    padding: 5px;
    border: 1px solid rgba(233, 0, 74, 0.2);
}

.heading-underlined {
    margin-bottom: 10px;
}

.black {
    color: black;
}

/**
 * Angular uses ng-cloak to hide dynamic content until the data is available. This causes screen flicker that shows the {{}} tags.
 * Angular (as per best practise) is loaded at the bottom of the page. The CSS it uses to hide dynamic content in in-lined in the AngularJS script file, so it also loads at the bottom of the page.
 * This means that even with ng-cloak we still get the flicker.
 *
 * Our CSS is loaded earlier, so we can specify the rule here and avoid most of the flicker.
 */
[ng-cloak] {
    display: none !important;
}

/**
 * date picker styling to match with page style. adding bootstrap well and well-sm
 */
.customdatepicker ul.dropdown-menu {
    min-height: 20px;
    padding: 9px;
    margin-bottom: 20px;
    background-color: #f5f5f5;
    border: 1px solid #e3e3e3;
    border-radius: 3px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05)
}

.customdatepicker .btn-default {
    border:  1px solid #e3e3e3;
}

.customdatepicker .btn.active {
    background-color: #39b3d7;
    color: black;
}

.selected {
    background-color: white;
}

.border-top-bottom {
    border-top: solid 1px lightgray;
}

.archive-comment {
    margin: 20px;
    font-family: "Lucida Grande", "Helvetica Nueue", Arial, sans-serif;
    font-weight: 200;
    font-style: italic;
}

.archived-publication {
    padding: 10px 20px;
    background-color: white;
    margin-bottom: 20px;
}

.single-tabbed-panel .nav-tabs li {
    display: none;
}

.nav-tabs {
    margin-bottom: 15px;
    margin-top: 15px;
}

#generalAlert {
    position: fixed;
    top: 75px;
    z-index: 9999;
    width: 100%;
    text-align: center;
}

#generalAlert div.alert {
    margin-left: auto;
    margin-right: auto;
    width: 70%;
    font-size: 1.2em;
    line-height: 1.2em;
    border-width: 2px;
    -webkit-box-shadow: 6px 5px 5px 0px rgba(50, 50, 50, 0.5);
    -moz-box-shadow: 6px 5px 5px 0px rgba(50, 50, 50, 0.5);
    box-shadow: 6px 5px 5px 0px rgba(50, 50, 50, 0.5);
}

.status-marker-small {
    font-size: 10px;
    margin-left: 5px;
}

